recept.css
/*CSS variables*/
:root {
    --primary-font: 'Open Sans', sans-serif;
    --primary-color: rgba(161, 0, 0, 0.3); /* pink */
    --secondary-color: #A10000; /* red */
}



/*basic reset*/
* {
  margin: 0;
  padding: 0;
  font: inherit;
  
}

/*utility classes*/
.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}


/*html style*/
html {
  background-color: var(--primary-color);
  /*display: flex;*/
  /*justify-content: center;*/
  width: 100vw;

}

/**Body style*/

body {
  background-color: #FFFFFF;
  color:#000000;
  font-family: var(--primary-font);
  max-width: 75vw;
  font-size: 1rem;
  font-weight: 400;
  /*display: flex;*/
  /*flex-direction: column;*/
  min-height: 100vh;
}

/*skip link*/
.skip {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.skip:focus {
  position: static;
  width: auto;
  height: auto;
}

/*Header style*/
header {
  max-width: 100%;
}




/*P style under titel*/
p.grey {
  background-color: #EBEBEB;
  padding: 1rem;
  
  
  
}

/*h styles*/
h1 {
    color: var(--secondary-color);
    font-size: 1.8rem;
    font-weight: 700;
    
}

h1, h2 {
    padding-bottom: 1rem;
}

h2 {
    font-size: 1.5rem;
    font-weight: 700;
    
}

/*p style*/

section p {
    padding-bottom: 1rem;
}

/*nav styles*/
.navbar ul {
    /*display: flex;*/
    gap: 1rem;
    list-style-type: none;
    padding: 0.3125rem;
}



.navbar ul li, .navbar ul li a {
    padding: 0.3125rem;  
    background-color: var(--secondary-color);
    color: #FFFFFF;
    text-decoration: none;
}


.navbar ul li a:focus, .navbar ul li a:hover {
  
  background-color: contrast-color(var(--secondary-color));
  color: #000000;
    
}


/*div style*/

.header-content, .content {
    padding: 48px 48px 0px 48px;
}
.content {
    
    /*display: flex;*/
    /*flex-direction: column;*/
    gap: 24px;
    
    
}



/*list styles*/
ul, ol {
  margin-left: 1rem;
  padding-left: 0.5rem;
}

/*image styles*/
.header-image {
    max-width: 100%;
    object-fit: cover;
    border: 1px;
    background-image: url(pannkaka-head.jpg);
    background-color: aqua;
    background-size: cover;
    min-height: 300px;
}

.footer-images {
  /*display: flex;*/
  /*justify-content: space-between;*/
  gap: 16px;

  img {
    
    max-width: 49%;
    max-height: 516px;
  }

}

/*.footer-images img {
    
    max-width: 49%;
    max-height: 516px;

}*/


/* media queries */
@media (max-width: 600px) {

  /*utility classes*/
  .flex-col-md {
    flex-direction: column;
  }

  /*html {
    flex-direction: column;
  }*/
  

  body {
    max-width: 100vw;
    
    
  }
  .header-content {
    padding: 48px 16px 16px 16px;
  
  }
  .content {
    padding: 0px 16px 64px 16px;
  }
  .footer-images {
    /*flex-direction: column;*/

    img {
      max-width: 100%;
      max-height: 516px;
    }
  }
  /*.footer-images img {
    
    max-width: 100%;
    max-height: 516px;

}*/


}

